# 3d-math

./: .gitignore  3d-math_API.h  Bound.h  CMakeLists.txt  Color.cpp  Color.h  MathFuncs.cpp  MathLibAPI.h  MathTime.cpp  MathTime.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  PerlinNoise.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  README.md  Ray.h  Time.cpp  Utility.cpp  Utility.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Source/: .gitignore  Bound.cpp  Bound.h  CMakeLists.txt  Color.cpp  Color.h  Math.cpp  Math.h  MathFuncs.cpp  MathFuncs.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  PerlinNoise.cpp  PerlinNoise.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Time.cpp  Time.h  Utility.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
